--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -7,7 +7,6 @@ body {
 
 #header {
     width: 100%;
-    height: 72px;
     color: #faf0e6;
     background-color: #333333;
 }
@@ -76,7 +75,7 @@ p {
 }
 
 a {
-    text-decoration: none;
+    cursor: pointer;
     color: #24738e;
 }
 
@@ -89,31 +88,13 @@ table {
     table-layout: fixed;
 }
 
-table#company_list{
-    width: 30%;
-}
-
-table#company_list th{
-    font-weight: bold;
-    padding: 10px 2%;
-}
-
-table#company_list .company_name {
-    width: 5%;
-    padding: 10px 2%;
-}
-
-table#company_list .company_action {
-    width: 8%;
-}
-
 th {
     width: 16%;
     padding: 10px 2%;
 }
 
 td {
-    width: 66%;
+    width: 100%;
     padding: 10px 2%;
 }
 
@@ -146,24 +127,6 @@ button {
     background-color: #f8d7da;
 }
 
-table#employee_list th {
-    width: 30%;
-    padding: 10px 2%;
-}
-
-table#employee_list td {
-    width: 29%;
-    padding: 10px 2%;
-}
-
-tr.row1 {
-        background-color: #f2f2f2;
-}
-
-tr.row0 {
-        background-color: #ffffff;
-}
-
 select {
     height: 30px;
 }
@@ -185,28 +148,6 @@ select {
 
 #header a {
     color: #eeeeee;
-}
-
-table#report_list th{
-    font-weight: bold;
-    padding: 10px 2%;
-}
-
-table#report_list .report_name {
-    width: 20%;
-    padding: 10px 2%;
-}
-
-table#report_list .report_date {
-    width: 20%
-}
-
-table#report_list .report_title {
-    width: 37%;
-}
-
-table#report_list .report_action {
-    width: 13%;
 }
 
 pre {
