--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -17,27 +17,8 @@ body {
     padding-left: 3%;
 }
 
-#header_menu {
-    width: 57%;
-    padding-top: 17px;
-    padding-left: 3%;
-    display: inline-block;
-}
-
-#employee_name {
-    color: #cccccc;
-    width: 36%;
-    padding-right: 3%;
-    text-align: right;
-    display: inline-block;
-}
-
-#header a {
-    color: #eeeeee;
-}
-
 h1 {
-    font-size: 48px;
+    font-size: 300%;
     display: inline;
     position: relative;
     padding: 0.25em 0;
@@ -49,10 +30,6 @@ h1:after {
   height: 4px;
   background: -webkit-linear-gradient(to right, rgb(255, 186, 115), #ffb2b2);
   background: linear-gradient(to right, rgb(255, 186, 115), #ffb2b2);
-}
-
-h1 a {
-    color: #eeeeee;
 }
 
 h2 {
