--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -9,20 +9,17 @@ body {
     width: 100%;
     color: #faf0e6;
     background-color: #333333;
-    padding: initial;
 }
 
 #content {
     width: 94%;
-    margin-top: 15px;
-    padding-left: 3%;
+    padding: 6% 0 0 3%;
 }
 
 h1 {
     font-size: 300%;
     display: inline;
     position: relative;
-    padding: 0.25em 0;
 }
 
 h1:after {
@@ -34,7 +31,7 @@ h1:after {
 }
 
 h2 {
-    font-size: 36px;
+    font-size: 24px;
     margin-bottom: 15px;
 }
 
@@ -49,6 +46,11 @@ li {
 
 p {
     margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+#toppage_p {
+    margin-top: 0;
     margin-bottom: 15px;
 }
 
@@ -86,23 +88,23 @@ button {
 }
 
 #flush_success {
-    width: 100%;
-    padding-top: 28px;
+    width: 40%;
+    padding-top: 10px;
     padding-left: 2%;
-    padding-bottom: 28px;
+    padding-bottom: 10px;
     margin-bottom: 15px;
     color: #155724;
     background-color: #d4edda;
 }
 
 #flush_error {
-    width: 100%;
-    padding-top: 28px;
+    width: 40%;
+    padding-top: 10px;
     padding-left: 2%;
-    padding-bottom: 28px;
+    padding-bottom: 10px;
     margin-bottom: 15px;
     color: #721c24;
-    background-color: #f8d7da   ;
+    background-color: #f8d7da;
 }
 
 select {
